--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<h1>Meio Ambiente
-<p>Meio ambiente faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade. </p>
+<!DOCTYPE html>
+
+<h1>Meio Ambiente </h1>
+
+<p><strong>meio ambiente </strong>faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade. </p>
 <p>A sustentabilidade busca o uso racional destes recursos naturais sem comprometer o meio ambiente preservando os uso das gerações futuras.</p>
 Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas.
 Ou seja, quando falamos de recursos naturais, estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.
 Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.
-Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas. Ou seja, quando falamos de recursos naturais, estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.
- Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.
-Give feedback
+Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas. Ou seja, quando falamos de recursos naturais,
+estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.
+<p>Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.</p>
 
-O que é Sustentabilidade?
+<p><em>O que é Sustentabilidade? ></em></p>
  
 <p>Sustentabilidade é a capacidade de usufruir dos recursos naturais presentes no planeta sem comprometer o uso dos mesmos para as gerações futuras.
 Nesse sentido, por exemplo, temos cada vez mais a aplicabilidade do termo em ações cotidianas como o consumo de produtos naturais, reutilização de embalagens, reciclagem, utilização de transportes menos poluentes.
 Investir em medidas que visam a aplicação de práticas sustentáveis na cadeia produtiva são ações que diversas empresas estão adotando para aperfeiçoar processos, para reduzir o impacto ambiental e para atrair consumidores</p>
 
-</h1>
