--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <p><strong>meio ambiente </strong>faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade. </p>
 <p>A sustentabilidade busca o uso racional destes recursos naturais sem comprometer o meio ambiente preservando os uso das gerações futuras.</p>
-Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas.
-Ou seja, quando falamos de recursos naturais, estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.
-Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.
-Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas. Ou seja, quando falamos de recursos naturais,
-estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.
+<p>Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas.
+    Ou seja, quando falamos de recursos naturais, estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.
+    Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.
+    Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas. Ou seja, quando falamos de recursos naturais,
+    estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.</p>
 <p>Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.</p>
 
 <p><em>O que é Sustentabilidade? ></em></p>
