--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
-<h1>Meio Ambiente </h1>
+<html>
+    <h1>Meio Ambiente </h1>
 
 <p><strong>meio ambiente </strong>faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade. </p>
 <p>A sustentabilidade busca o uso racional destes recursos naturais sem comprometer o meio ambiente preservando os uso das gerações futuras.</p>
@@ -16,4 +16,8 @@
 <p>Sustentabilidade é a capacidade de usufruir dos recursos naturais presentes no planeta sem comprometer o uso dos mesmos para as gerações futuras.
 Nesse sentido, por exemplo, temos cada vez mais a aplicabilidade do termo em ações cotidianas como o consumo de produtos naturais, reutilização de embalagens, reciclagem, utilização de transportes menos poluentes.
 Investir em medidas que visam a aplicação de práticas sustentáveis na cadeia produtiva são ações que diversas empresas estão adotando para aperfeiçoar processos, para reduzir o impacto ambiental e para atrair consumidores</p>
+
+
+</html>
+
 
