--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<meta charset=" utf-8"> 
+
     <h1>Meio Ambiente </h1>
 
 <p><strong>meio ambiente </strong>faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade. </p>
