--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <meta charset=" utf-8"> 
+<title>Meio ambiente</title>
 
     <h1>Meio Ambiente </h1>
 
@@ -14,8 +15,7 @@
 <p>Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.</p>
 
 <p><em>O que é Sustentabilidade? ></em></p>
- 
-<p>Sustentabilidade é a capacidade de usufruir dos recursos naturais presentes no planeta sem comprometer o uso dos mesmos para as gerações futuras.
+<p>Sustentabilidade é a capacidade de usufruir dos recursos naturais presentes no planeta sem comprometer o uso dos mesmos para as gerações futuras.</p>
 Nesse sentido, por exemplo, temos cada vez mais a aplicabilidade do termo em ações cotidianas como o consumo de produtos naturais, reutilização de embalagens, reciclagem, utilização de transportes menos poluentes.
 Investir em medidas que visam a aplicação de práticas sustentáveis na cadeia produtiva são ações que diversas empresas estão adotando para aperfeiçoar processos, para reduzir o impacto ambiental e para atrair consumidores</p>
 
