--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<meta charset=" utf-8"> 
-<title>Meio ambiente</title>
+    <head>
+        <meta charset=" utf-8"> 
+        <title>Meio ambiente</title>
+    </head>
 
+<body>
     <h1>Meio Ambiente </h1>
 
 <p><strong>Meio ambiente faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade.</strong> </p>
@@ -14,17 +17,15 @@
     estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.</p>
 <p>Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.</p>
 
-<<<<<<< HEAD
 <p style="font-size:20px;"><em>O que é Sustentabilidade? ></em></p>
  
 <p>Sustentabilidade é a capacidade de usufruir dos recursos naturais presentes no planeta sem comprometer o uso dos mesmos para as gerações futuras.</p>
 <p><em>O que é Sustentabilidade? ></em></p>
 <p>Sustentabilidade é a capacidade de usufruir dos recursos naturais presentes no planeta sem comprometer o uso dos mesmos para as gerações futuras.</p>
->>>>>>> f2c10039f91c9396784470c924d4736c76d6dcd8
 Nesse sentido, por exemplo, temos cada vez mais a aplicabilidade do termo em ações cotidianas como o consumo de produtos naturais, reutilização de embalagens, reciclagem, utilização de transportes menos poluentes.
 Investir em medidas que visam a aplicação de práticas sustentáveis na cadeia produtiva são ações que diversas empresas estão adotando para aperfeiçoar processos, para reduzir o impacto ambiental e para atrair consumidores</p>
 
-
+ </body>
 </html>
 
 
