--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
 <body>
-    <h1>Meio Ambiente </h1>
+    <h1 style="text-align:center ;">Meio Ambiente </h1>
 
 <p><strong>Meio ambiente faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade.</strong> </p>
 <p>A sustentabilidade busca o uso racional destes recursos naturais sem comprometer o meio ambiente preservando os uso das gerações futuras.</p>
