--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 <p>é a capacidade de usufruir dos recursos naturais presentes no planeta sem comprometer o uso dos mesmos para as gerações futuras.
     Nesse sentido, por exemplo, temos cada vez mais a aplicabilidade do termo em ações cotidianas como o consumo de produtos naturais, reutilização de embalagens, reciclagem, utilização de transportes menos poluentes.
     Investir em medidas que visam a aplicação de práticas sustentáveis na cadeia produtiva são ações que diversas empresas estão adotando para aperfeiçoar processos, para reduzir o impacto ambiental e para atrair consumidores</p> 
+
+   <p style="font: size center ;"> A importância da reciclagem para o meio ambiente</p>
+ <p style="font-size:center ;">A reciclagem é um processo de grande importância para a preservação do meio ambiente.Através da reciclagem e da diminuição do lixo é possível reduzir a poluição do ar, da água e do solo
+    O processo de reciclagem engloba a separação do lixo por categorias para que os resíduos possam ser reutilizados, dando origem a novos produtos.
+     Podem ser usados na reciclagem materiais como plástico, papel, vidro, papelão, madeira e metais em geral.</p>
  </body>
 </html>
 
