--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <style>
             p{
-                "font-size:center 
+                text-align: center;
             }
         </style>
     </head>
@@ -16,7 +16,7 @@
 
 <p><strong>Meio ambiente faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade.</strong> </p>
 <p style="font-size:center ;" >A sustentabilidade busca o uso racional destes recursos naturais sem comprometer o meio ambiente preservando os uso das gerações futuras.</p>
-<p style=;">Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas.
+<p style="font-size:center ;">Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas.
     Ou seja, quando falamos de recursos naturais, estamos basicamente fazendo referência ao meio ambiente, pois tudo que utilizamos no nosso dia-a-dia depende diretamente ou indiretamente dele.
     Preservar o meio ambiente, dessa forma, se torna um dos principais princípios da sustentabilidade.
     Meio ambiente é o ambiente em que os seres estão inseridos, bem como suas condições ambientais, biológicas, físicas e químicas. Ou seja, quando falamos de recursos naturais,
